# react-native-quick-md5

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  README.md  package.json  react-native-quick-md5.podspec  tsconfig.json
.github/workflows/: build-android.yml  build-ios.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativequickmd5/: QuickMd5JSIModulePackage.java  QuickMd5Module.java  QuickMd5Module.kt  QuickMd5Package.java  QuickMd5Package.kt
cpp/: md5.cpp  md5.h  quick-md5.cpp  quick-md5.h
example/: app.json  index.tsx  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativequickmd5/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativequickmd5/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/QuickMd5Example/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/QuickMd5Example.xcodeproj/: project.pbxproj
example/ios/QuickMd5Example.xcodeproj/xcshareddata/xcschemes/: QuickMd5Example.xcscheme
example/ios/QuickMd5Example.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: QuickMd5.h  QuickMd5.m  QuickMd5.mm  QuickMd5.swift
ios/QuickMd5.xcodeproj/: project.pbxproj
src/: index.tsx
